@@ -13,9 +13,15 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TourPlanner</name>
 	<description>Tour Planner project for Spring Boot</description>
+
 	<properties>
 		<java.version>21</java.version>
+		<itext.version>7.2.4</itext.version>
+		<slf4j.version>2.0.6</slf4j.version>
+
 	</properties>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -74,6 +80,28 @@
 			<classifier>win</classifier>
 		</dependency>
 
+			<!-- JavaFX WebView for integrating Leaflet -->
+			<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-web</artifactId>
+				<version>21-ea+24</version>
+			</dependency>
+
+
+
+
+
+		<!-- PDF generation-->
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+
+
+
 		<!-- Log4j dependencies -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -85,6 +113,28 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.23.1</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
+			<!-- TestFX -->
+			<dependency>
+				<groupId>org.testfx</groupId>
+				<artifactId>testfx-core</artifactId>
+				<version>4.0.16-alpha</version> <!-- Check for the latest version -->
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.testfx</groupId>
+				<artifactId>testfx-junit5</artifactId>
+				<version>4.0.16-alpha</version> <!-- Check for the latest version -->
+				<scope>test</scope>
+			</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -97,6 +147,15 @@
 						<exclude>
 							<groupId>org.project-lombok</groupId>
 							<artifactId>lombok</artifactId>
+
+								<groupId>org.apache.maven.plugins</groupId>
+								<artifactId>maven-surefire-plugin</artifactId>
+								<version>3.5.0</version> <!-- Use the latest version -->
+								<configuration>
+									<argLine>-XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage</argLine>
+								</configuration>
+
+
 						</exclude>
 					</excludes>
 				</configuration>
